--- a/src/features/auth/scss/RegisterModal.scss
+++ b/src/features/auth/scss/RegisterModal.scss
@@ -109,5 +109,18 @@
         background-color: #36a420;
       }
     }
+    &__avatar-preview {
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+  
+      .avatar-preview {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+    }
+  
   }
   
