--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,37 @@
     }
   }
   
+
+  .connected-users {
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 10px;
+    }
+  
+    ul {
+      list-style: none;
+      padding: 0;
+  
+      li {
+        display: flex;
+        align-items: center;
+        margin-bottom: 8px;
+  
+        .status-icon {
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          margin-right: 8px;
+  
+          &.online {
+            background-color: green; // Color para usuarios conectados
+          }
+  
+          &.offline {
+            background-color: red; // Color para usuarios desconectados (si lo implementas)
+          }
+        }
+      }
+    }
+  }
+  
